--- a/index.html
+++ b/index.html
@@ -1,181 +1,110 @@
 <!DOCTYPE html>
-<html lang="fa" dir="rtl">
+<html lang="fa">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تحلیل پورتفوی</title>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <title>محاسبه صندوق عیار مفید</title>
     <style>
+        @font-face {
+            font-family: 'BNazanin';
+            src: url('https://cdn.jsdelivr.net/gh/rastikerdar/b-nazanin-font@master/fonts/BNazanin.woff2') format('woff2');
+        }
         body {
-            font-family: Arial, sans-serif;
-            text-align: right;
-            background-color: #f4f4f4;
+            font-family: 'BNazanin', Arial, sans-serif;
+            text-align: center;
+            background-color: #eef2f7;
             padding: 20px;
         }
         .container {
-            max-width: 800px;
-            margin: 0 auto;
             background: white;
             padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        .value {
-            font-size: 1.2em;
-            margin: 10px 0;
-        }
-        .portfolio-value { color: blue; }
-        .profit { color: green; }
-        .loss { color: red; }
-        canvas {
-            margin-top: 20px;
-        }
-        .input-section {
+            border-radius: 15px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            max-width: 400px;
+            margin: auto;
             margin-bottom: 20px;
         }
-        input[type="number"] {
-            padding: 5px;
-            font-size: 1em;
+        input, button {
+            margin: 10px 0;
+            padding: 12px;
+            width: 100%;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            font-size: 16px;
+        }
+        #currentPrice {
+            width: 50%;
+            padding: 8px;
+            font-size: 14px;
+            display: block;
+            margin: 10px auto;
         }
         button {
-            padding: 5px 10px;
-            font-size: 1em;
-            background-color: #4CAF50;
+            background: #007bff;
             color: white;
-            border: none;
             cursor: pointer;
+            border: none;
+            transition: background 0.3s;
         }
         button:hover {
-            background-color: #45a049;
+            background: #0056b3;
+        }
+        .result {
+            margin-top: 20px;
+            font-size: 18px;
+            font-weight: bold;
+            color: #333;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>تحلیل پورتفوی</h1>
-        <div class="input-section">
-            <label for="currentPrice">قیمت فعلی هر واحد (ریال):</label>
-            <input type="number" id="currentPrice" min="0" step="1" required>
-            <button onclick="calculatePortfolio()">محاسبه</button>
-        </div>
-        <div id="totalBuySell" class="value"></div>
-        <div id="portfolioValue" class="value portfolio-value"></div>
-        <div id="profitLoss" class="value"></div>
-        <canvas id="performanceChart"></canvas>
+        <h2>بارگذاری اطلاعات از GitHub</h2>
+        <button onclick="loadDataFromGitHub()">بارگذاری اطلاعات</button>
+    </div>
+
+    <div class="container">
+        <h2>محاسبه ارزش و سود</h2>
+        <label for="currentPrice">قیمت فعلی هر واحد:</label>
+        <input type="number" id="currentPrice" placeholder="قیمت فعلی">
+        <button onclick="calculate()">محاسبه</button>
+        <div class="result" id="output"></div>
     </div>
 
     <script>
-        // Fetch CSV from GitHub
-        const csvUrl = 'https://raw.githubusercontent.com/YOUR_USERNAME/YOUR_REPOSITORY/main/portfolio.csv';
-        let transactions = [];
+        let totalBuyAmount = 0, totalUnits = 0;
+        const GITHUB_FILE_URL = "https://raw.githubusercontent.com/USERNAME/REPOSITORY/main/data.csv"; // لینک فایل CSV در گیت‌هاب
 
-        fetch(csvUrl)
-            .then(response => response.text())
-            .then(data => {
-                const rows = data.trim().split('\n').slice(1); // Skip header
-                transactions = rows.map(row => {
-                    const [date, buyUnits, buyPrice, sellUnits, sellPrice] = row.split(',');
-                    return {
-                        date: convertPersianDate(date),
-                        buyUnits: parseInt(buyUnits),
-                        buyPrice: parseInt(buyPrice),
-                        sellUnits: parseInt(sellUnits),
-                        sellPrice: parseInt(sellPrice)
-                    };
-                });
-            })
-            .catch(error => console.error('Error fetching CSV:', error));
+        function loadDataFromGitHub() {
+            fetch(GITHUB_FILE_URL)
+                .then(response => response.text())
+                .then(data => {
+                    const lines = data.split("\n");
+                    lines.forEach(line => {
+                        const [buyPrice, buyUnits, sellPrice, sellUnits] = line.split(",").map(Number);
+                        totalBuyAmount += (buyPrice * buyUnits || 0) - (sellPrice * sellUnits || 0);
+                        totalUnits += (buyUnits || 0) - (sellUnits || 0);
+                    });
+                    alert("اطلاعات از GitHub بارگذاری شد.");
+                })
+                .catch(error => alert("خطا در بارگذاری داده‌ها: " + error));
+        }
 
-        function calculatePortfolio() {
-            const currentPrice = parseInt(document.getElementById('currentPrice').value);
-            if (!currentPrice || currentPrice <= 0) {
-                alert('لطفاً قیمت فعلی معتبر وارد کنید.');
+        function calculate() {
+            let currentPrice = parseFloat(document.getElementById("currentPrice").value);
+
+            if (isNaN(currentPrice) || totalUnits <= 0) {
+                document.getElementById("output").innerHTML = "لطفاً قیمت فعلی را وارد کنید و ابتدا اطلاعات را بارگذاری نمایید.";
                 return;
             }
 
-            // Calculate totals
-            const totalBuy = transactions.reduce((sum, t) => sum + (t.buyUnits * t.buyPrice), 0);
-            const totalSell = transactions.reduce((sum, t) => sum + (t.sellUnits * t.sellPrice), 0);
-            const totalBuySell = totalBuy - totalSell;
+            let currentValue = currentPrice * totalUnits;
+            let profit = currentValue - totalBuyAmount;
 
-            const remainingUnits = transactions.reduce((sum, t) => sum + t.buyUnits - t.sellUnits, 0);
-            const portfolioValue = remainingUnits * currentPrice;
-            const profitLoss = portfolioValue + totalSell - totalBuy;
-
-            // Display values
-            document.getElementById('totalBuySell').innerHTML = `مبلغ کل خرید با احتساب فروش: ${totalBuySell.toLocaleString()} ریال`;
-            document.getElementById('portfolioValue').innerHTML = `ارزش پورتفو: ${portfolioValue.toLocaleString()} ریال`;
-            const profitLossElement = document.getElementById('profitLoss');
-            profitLossElement.innerHTML = `مبلغ سود/زیان: ${Math.abs(profitLoss).toLocaleString()} ریال`;
-            profitLossElement.className = `value ${profitLoss >= 0 ? 'profit' : 'loss'}`;
-
-            // Calculate and render performance
-            const performance = calculatePerformance(transactions, currentPrice);
-            renderChart(performance);
-        }
-
-        // Convert Persian date (e.g., 1403/05/09) to Gregorian timestamp
-        function convertPersianDate(persianDate) {
-            const [year, month, day] = persianDate.split('/').map(Number);
-            const gregorianDate = new Date(year - 621, month - 1, day); // Rough approximation
-            return gregorianDate;
-        }
-
-        // Calculate performance over time periods
-        function calculatePerformance(transactions, currentPrice) {
-            const periods = {
-                'هفتگی': 7,
-                'ماهانه': 30,
-                'سه ماهه': 90,
-                'شش ماهه': 180,
-                'سالانه': 365,
-                'دو ساله': 730,
-                'سه ساله': 1095
-            };
-            const today = new Date('2025-03-28'); // Current date
-            const performance = {};
-
-            for (const [label, days] of Object.entries(periods)) {
-                const startDate = new Date(today);
-                startDate.setDate(today.getDate() - days);
-
-                let units = 0, totalCost = 0, totalSell = 0;
-                transactions.forEach(t => {
-                    if (t.date >= startDate) {
-                        units += t.buyUnits - t.sellUnits;
-                        totalCost += t.buyUnits * t.buyPrice;
-                        totalSell += t.sellUnits * t.sellPrice;
-                    }
-                });
-                const currentValue = units * currentPrice;
-                const returnValue = (currentValue + totalSell - totalCost) / (totalCost || 1) * 100;
-                performance[label] = returnValue;
-            }
-            return performance;
-        }
-
-        // Render bar chart
-        function renderChart(performance) {
-            const ctx = document.getElementById('performanceChart').getContext('2d');
-            if (window.myChart) window.myChart.destroy(); // Destroy previous chart if exists
-            window.myChart = new Chart(ctx, {
-                type: 'bar',
-                data: {
-                    labels: Object.keys(performance),
-                    datasets: [{
-                        label: 'بازدهی (%)',
-                        data: Object.values(performance),
-                        backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                        borderColor: 'rgba(75, 192, 192, 1)',
-                        borderWidth: 1
-                    }]
-                },
-                options: {
-                    scales: {
-                        y: { beginAtZero: true }
-                    }
-                }
-            });
+            document.getElementById("output").innerHTML = 
+                `مبلغ کل خرید: ${totalBuyAmount.toLocaleString()} تومان<br>
+                 ارزش فعلی: ${currentValue.toLocaleString()} تومان<br>
+                 میزان سود/زیان: ${profit.toLocaleString()} تومان`;
         }
     </script>
 </body>
