--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
         function updateTotalValue() {
             let totalValue = totalProfitLoss + (totalGoldValue / 10);
-            document.getElementById("totalValue").innerHTML = <span class="totalValue">${Math.floor(totalValue).toLocaleString('fa-IR')} تومان</span>;
+            document.getElementById("totalValue").innerHTML = `<span class="totalValue">${Math.floor(totalValue).toLocaleString('fa-IR')} تومان</span>`;
         }
     </script>
 </body>
