--- a/index.html
+++ b/index.html
@@ -172,9 +172,10 @@
         }
 
         function updateTotalValue() {
-            let totalValue = totalProfitLoss + (totalGoldValue / 10);
-            document.getElementById("totalValue").innerHTML = `ارزش کل: <span class="totalValue">${Math.floor(totalValue).toLocaleString('fa-IR')} تومان</span>`;
-        }
+    let totalValue = currentValue + (totalGoldValue / 10);  // تغییرات اینجا
+    document.getElementById("totalValue").innerHTML = `ارزش کل: <span class="totalValue">${Math.floor(totalValue).toLocaleString('fa-IR')} تومان</span>`;
+}
+
     </script>
 </body>
 </html>
