--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
 <body>
     <div class="container">
         <h2><span class="gold">صندوق طلای عیار مفید</span></h2>
-        <label for="currentPrice">قیمت هر واحد</label>
+        <label for="currentPrice">(ریال) قیمت هر واحد</label>
         <input type="number" id="currentPrice" placeholder="قیمت فعلی">
         <button onclick="calculate()">محاسبه</button>
         <div class="result" id="output"></div>
         
         <h2><span class="gold">طلای آبشده</span></h2>
-        <label for="goldPrice">قیمت هر گرم طلا</label>
+        <label for="goldPrice">(تومان) قیمت هر گرم طلا</label>
         <input type="number" id="goldPrice" placeholder="قیمت هر گرم طلا">
         <button onclick="calculateGoldValue()">محاسبه</button>
         <div class="result" id="goldOutput"></div>
@@ -144,9 +144,9 @@
             totalProfitLoss = profit / 10;
             document.getElementById("output").innerHTML = 
                 `مبلغ کل خرید: ${(Math.floor(totalBuyAmount / 10)).toLocaleString('fa-IR')} تومان<br>
-                <span style="color: blue;">ارزش فعلی: ${(Math.floor(currentValue / 10)).toLocaleString('fa-IR')} تومان</span><br>
-                <span style="color: ${percentageColor};">میزان سود/زیان: ${(Math.floor(totalProfitLoss)).toLocaleString('fa-IR')} تومان</span><br>
-                <span class="percentage" style="color: ${percentageColor};">درصد تغییرات: ${percentageChange.toFixed(2)}%</span>`;
+                <span style="color: blue;">ارزش فعلی: ${(Math.floor(currentValue / 10)).toLocaleString('fa-IR')}</span><br>
+                <span style="color: ${percentageColor};">میزان سود/زیان: ${(Math.floor(totalProfitLoss)).toLocaleString('fa-IR')}</span><br>
+                <span class="percentage" style="color: ${percentageColor};">درصد تغییرات: ${percentageChange.toFixed(2)}</span>`;
 
             updateTotalValue();
         }
@@ -161,14 +161,14 @@
             }
 
             totalGoldValue = (goldPrice / 750) * 750 * 278.44;
-            document.getElementById("goldOutput").innerHTML = `ارزش طلا: ${(Math.floor(totalGoldValue / 10)).toLocaleString('fa-IR')} تومان`;
+            document.getElementById("goldOutput").innerHTML = `ارزش طلا: ${(Math.floor(totalGoldValue / 10)).toLocaleString('fa-IR')}`;
 
             updateTotalValue();
         }
 
         function updateTotalValue() {
             let totalValue = (currentValue / 10) + (totalGoldValue / 10); 
-            document.getElementById("totalValue").innerHTML = `ارزش کل: <span class="totalValue">${Math.floor(totalValue).toLocaleString('fa-IR')} تومان</span>`;
+            document.getElementById("totalValue").innerHTML = `ارزش کل: <span class="totalValue">${Math.floor(totalValue).toLocaleString('fa-IR')}</span>`;
         }
     </script>
 </body>
