--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
         function updateTotalValue() {
             let totalValue = (currentValue / 10) + (totalGoldValue / 10); 
-            document.getElementById("totalValue").innerHTML = `ارزش کل: <span class="totalValue">${Math.floor(totalValue).toLocaleString('fa-IR')}</span>`;
+            document.getElementById("totalValue").innerHTML = `<span class="totalValue">${Math.floor(totalValue).toLocaleString('fa-IR')}</span>`;
         }
     </script>
 </body>
