--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="result" id="output"></div>
         
         <h2><span class="gold">طلای آبشده</span></h2>
-        <label for="goldPrice">(تومان) قیمت هر گرم طلا</label>
+        <label for="goldPrice">(ریال) قیمت هر گرم طلا</label>
         <input type="number" id="goldPrice" placeholder="قیمت هر گرم طلا">
         <button onclick="calculateGoldValue()">محاسبه</button>
         <div class="result" id="goldOutput"></div>
