--- a/index.html
+++ b/index.html
@@ -134,10 +134,6 @@
                 document.getElementById("output").innerHTML = "لطفاً قیمت فعلی را وارد کنید و ابتدا اطلاعات را بارگذاری نمایید.";
                 return;
             }
-        function toPersianNumber(num) {
-                const persianDigits = ['۰', '۱', '۲', '۳', '۴', '۵', '۶', '۷', '۸', '۹'];
-                return num.toString().replace(/\d/g, (digit) => persianDigits[digit]);
-            }
 
             currentValue = currentPrice * totalUnits;
             let profit = currentValue - totalBuyAmount;
@@ -150,7 +146,7 @@
                 `مبلغ کل خرید: ${(Math.floor(totalBuyAmount / 10)).toLocaleString('fa-IR')} تومان<br>
                 <span style="color: blue;">ارزش فعلی: ${(Math.floor(currentValue / 10)).toLocaleString('fa-IR')}</span><br>
                 <span style="color: ${percentageColor};">میزان سود یا زیان: ${(Math.floor(totalProfitLoss)).toLocaleString('fa-IR')}</span><br>
-                <span class="percentage" style="color: ${percentageColor};">درصد تغییرات: ${toPersianNumber(percentageChange.toFixed(2)}</span>`;
+                <span class="percentage" style="color: ${percentageColor};">درصد تغییرات: ${percentageChange.toFixed(2)}</span>`;
 
             updateTotalValue();
         }
