--- a/index.html
+++ b/index.html
@@ -146,7 +146,9 @@
                 `مبلغ کل خرید: ${(Math.floor(totalBuyAmount / 10)).toLocaleString('fa-IR')}<br>
                 <span style="color: blue;">ارزش فعلی: ${(Math.floor(currentValue / 10)).toLocaleString('fa-IR')}</span><br>
                 <span style="color: ${percentageColor};">میزان سود یا زیان: ${(Math.floor(totalProfitLoss)).toLocaleString('fa-IR')}</span><br>
-                <span class="percentage" style="color: ${percentageColor};">درصد تغییرات: ${percentageChange.toFixed(2)}</span>`;
+                <span class="percentage" style="color: ${percentageColor};">
+                  ${percentageChange >= 0 ? 'افزایش' : 'کاهش'} به میزان ${percentageChange.toFixed(2)}٪
+                </span>
 
             updateTotalValue();
         }
